--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,14 @@
 # 祝高考学子，金榜题名!
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒支付宝抢消费券
+cron "25 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒签到收能量
+cron "0 22 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ylsh.png, enabled=true, tag=引力生活
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东GNC组队瓜分京豆
+cron "20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=省钱大赢家之翻翻乐
+cron "5,35 * * 6 *" script-path=https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东翻翻乐提现
+cron "10 10 1-18 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=限时盲盒
+cron "0 1 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东城城分现金互助
 cron "0  9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_618jc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=手机竞猜
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxlhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包
 cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
@@ -41,7 +49,6 @@ cron "1 0,11,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301
 cron "20 9 21-27 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_mi.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东Redmi合成小金刚
 cron "0 */8 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/helpbang.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/140.png, enabled=true, tag=互利帮(需TF资格)
 cron "20 9 20-31 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_martin.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=人头马x博朗
-cron "0 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴免费水果
 cron "15 9 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/jd_jr_sign.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东金融领豆（不共用京东ck另抓）
 cron "25 9 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
@@ -76,8 +83,7 @@ cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://qxzy.top/rules/QuantumultX/img/ryhy.png, enabled=true, tag=如意花园
 cron "25 3 * * 2" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_shop_captain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️超级无线组队分奖品
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
-cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
-cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴出行zZPiglet
+cron "1 9 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/didi.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴出行
 cron "30 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会
 cron "*/60 * * * *" script-path=http://nm66.top/dydhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖红包
 cron "*/1 * * * *" script-path=http://nm66.top/dyd.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖
@@ -371,19 +377,17 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/pagoda/pagoda.js, img-url=https://qxzy.top/rules/QuantumultX/img/pagoda.png, enabled=true, tag=百果园
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ithome/ithome.js, img-url=https://qxzy.top/rules/QuantumultX/img/ithome.png, enabled=true, tag=IT之家
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/nfzm/nfzm.js, img-url=https://qxzy.top/rules/QuantumultX/img/nfzm.png, enabled=true, tag=nfzm-签到
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, img-url=https://qxzy.top/rules/QuantumultX/img/115.png, enabled=true, tag=115
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Blibee/Blibee.js, img-url=https://qxzy.top/rules/QuantumultX/img/Blibee.png, enabled=true, tag=便利蜂
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴出行
-cron "59 23 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_reward.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴出行
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Naixue/Naixue.js, img-url=https://qxzy.top/rules/QuantumultX/img/Naixue.png, enabled=true, tag=奈雪
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/ZMTeacher/ZMTeacher.js, img-url=https://qxzy.top/rules/QuantumultX/img/ZMTeacher.png, enabled=true, tag=掌门好老师
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/115/115.js, img-url=https://qxzy.top/rules/QuantumultX/img/115.png, enabled=true, tag=⚠️115
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Blibee/Blibee.js, img-url=https://qxzy.top/rules/QuantumultX/img/Blibee.png, enabled=true, tag=⚠️便利蜂
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Naixue/Naixue.js, img-url=https://qxzy.top/rules/QuantumultX/img/Naixue.png, enabled=true, tag=⚠️奈雪
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/ZMTeacher/ZMTeacher.js, img-url=https://qxzy.top/rules/QuantumultX/img/ZMTeacher.png, enabled=true, tag=⚠️掌门好老师
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么-打卡领红包
 cron "10 00 * * *" script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/eleme/eleme_daily.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么领豆（超级吃货卡抓ck）
 cron "00 10 * * *" script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/eleme/eleme_mission.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么会员任务（超级吃货卡抓ck）
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Oclean/Oclean.js, img-url=https://qxzy.top/rules/QuantumultX/img/Oclean.png, enabled=true, tag=欧可林
-cron "0 * * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, img-url=https://qxzy.top/rules/QuantumultX/img/heybox.png, enabled=true, tag=小黑盒
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, img-url=https://qxzy.top/rules/QuantumultX/img/heybox.png, enabled=true, tag=⚠️小黑盒
 cron "0 0 0 * * ?" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/sony/sonyClub.js, img-url=https://qxzy.top/rules/QuantumultX/img/SONY.png, enabled=true, tag=索尼俱乐部
-cron "0 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Domino/Domino_getSMS.js, img-url=https://qxzy.top/rules/QuantumultX/img/Domino.png, enabled=true, tag=达美乐
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Domino/Domino_getSMS.js, img-url=https://qxzy.top/rules/QuantumultX/img/Domino.png, enabled=true, tag=⚠️达美乐
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/MovieCalendar/MovieCalendar.js, img-url=https://qxzy.top/rules/QuantumultX/img/MovieCalendar.png, enabled=true, tag=电影日历
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/umetrip/umetrip.js, img-url=https://qxzy.top/rules/QuantumultX/img/umetrip.png, enabled=true, tag=航旅纵横
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么
@@ -396,6 +400,7 @@ cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scri
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/sinanews.js, img-url=https://qxzy.top/rules/QuantumultX/img/sinanews.png, enabled=true, tag=新浪新闻
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/translate.js, img-url=https://qxzy.top/rules/QuantumultX/img/translate.png, enabled=true, tag=谷歌中英互译
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/txnews.js, img-url=https://qxzy.top/rules/QuantumultX/img/txnews.png, enabled=true, tag=腾讯新闻
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Weibo/Weibo.js, img-url=https://qxzy.top/rules/QuantumultX/img/weibo.png, enabled=true, tag=微博通知
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/weibo/weibotalk.js, img-url=https://qxzy.top/rules/QuantumultX/img/weibo.png, enabled=true, tag=微博超话
 cron "0 11 8 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/weibo.js, img-url=https://qxzy.top/rules/QuantumultX/img/weibo.png, enabled=true, tag=微博签到
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/mydigit.js, img-url=https://qxzy.top/rules/QuantumultX/img/mydigit.png, enabled=true, tag=数码之家
