--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东合肥旗舰店开业动物园版
 cron "0 22 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=引力生活
 cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/zoo.png, enabled=true, tag=京东GNC组队瓜分京豆
 cron "20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/lxk0301.png, enabled=true, tag=京东省钱大赢家之翻翻乐0301版
