--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,40 +1,74 @@
+京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东新潮品牌狂欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_mcxhd_brandcity.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/Wenmoux/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东合肥旗舰店开业动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooSupershophf.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东限时盲盒动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooLimitbox.js,cronexpr="10 10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动4 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard04.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard03.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动2 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard02.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东宝洁消消乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东柠檬618惊奇探秘夜 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qqtmy.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬我是大老板农场 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_wsdlb.js,cronexpr="5 6-18/6 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东京喜88元红包0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东京喜88元红包隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东京喜牧场0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东京喜牧场隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东省钱大赢家之翻翻乐0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_big_winner.js,cronexpr="20 * * * *", timeout=3600, script-update-interval=43200, enable=true
+京东省钱大赢家之翻翻乐隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_big_winner.js,cronexpr="20 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东新潮品牌狂欢0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_mcxhd.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东星推官获取互助0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_xtg_help.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东新潮品牌狂欢隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_mcxhd.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东明星小店 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_star_shop.js,cronexpr="0 1,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东5G超级盲盒 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_mohe.js,cronexpr="0 0,1-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东金榜创造营0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_gold_creator.js,cronexpr="13 1,22 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东金榜创造营隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_gold_creator.js,cronexpr="13 1,22 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东家电星推官0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_xtg.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东家电星推官隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_xtg.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东动物联萌0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_zoo.js,cronexpr="13 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东动物联萌隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_zoo.js,cronexpr="13 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东手机狂欢城0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_carnivalcity.js,cronexpr="0 0-18/6 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东手机狂欢城隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_carnivalcity.js,cronexpr="0 0-18/6 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东城城领现金0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_city.js,cronexpr="0 0-23/1 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东城城领现金隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_city.js,cronexpr="0 0-23/1 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东跳跳乐瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jump.js,cronexpr="1 0,11,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
- = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_daily_lottery.js,cronexpr="13 1,22,23 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东每日抽奖 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_daily_lottery.js,cronexpr="13 1,22,23 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东领金贴 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jin_tie.js,cronexpr="10 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东幸运大转盘0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_market_lottery.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东幸运大转盘隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_market_lottery.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东健康社区收能量0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_health_collect.js,cronexpr="5-45/20 * * * *", timeout=3600, script-update-interval=43200, enable=true
+京东健康社区收能量隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_health_collect.js,cronexpr="5-45/20 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东健康社区0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_health.js,cronexpr="10 0-23/4 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东健康社区隐藏姓名版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_health.js,cronexpr="10 0-23/4 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东手机尚学季 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_xtg.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -100,8 +134,6 @@
 
 取关京东店铺商品 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_unsubscribe.js,cronexpr="55 23 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东京喜签到 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jx_sign.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东柠檬京喜工厂抢茅台（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_jxgc.js,cronexpr="58,59,0 18,19 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬拆红包（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_chb.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -109,8 +141,6 @@
 京东柠檬推一推（需填变量） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_tyt.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京喜牧场刷金币 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_mc_coin.js,cronexpr="0 10 * * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬极速版砍价（需填变量） = type=cron,script-path=https://cdn.jsdelivr.net/gh/panghu999/panghu@master/jd_kanjia.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -122,19 +152,7 @@
 
 京东京喜牧场 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_mc.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东合肥旗舰店开业动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东翻翻乐提现 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js,cronexpr="5,35 * * 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东限时盲盒动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js,cronexpr="10 10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东城城分现金互助执意版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js,cronexpr="0 1 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -144,39 +162,21 @@
 
 京东整点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_super_redrain.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东618开卡活动4 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard04.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东新潮品牌狂欢执意版 = type=cron,script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_xckh.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东618开卡活动3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard03.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动2 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard02.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东柠檬华为荣耀618 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ry618.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东新潮品牌联欢柠檬版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618主会场红包雨 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js,cronexpr="1 20 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东宝洁消消乐 = type=cron,script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
 京东动物联萌修复火爆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js,cronexpr="5 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东欧乐b = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_member_olb.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东新潮品牌狂欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
 京东大牌闪购红包雨 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_dphby.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东特物国创IP = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_gcip.js,cronexpr="1 0 * * * ", timeout=3600, script-update-interval=43200, enable=true
-
-京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬东东泡泡大战 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppdz.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -193,8 +193,6 @@
 京东一次性入会领豆11 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_11.js,cronexpr="0 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 【等更新不要用】京东城城分现金自动提现柠檬版 = type=cron,script-path=http://nm66.top/jd_cctx.js,cronexpr="*/5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东星推官获取互助0301版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_xtg_help.js,cronexpr="0 0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东家电星推官（圈x可能有不停止bug等更新） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/adolf_star.js,cronexpr="40 9-18/3 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
 
